# nightingale

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pyproject_old.toml  requirements.txt  requirements_prod.txt
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/.github/workflows/: build-and-publish-doc.yml
.github/workflows/: build-and-publish-doc.yml
.zen/: config.yaml
app/fastapi/: main.py  test.ipynb
app/fastapi/static/: index.html
conf/: logging.yml
docs/source/: conf.py  index.rst
kedro-proj/nightingale/: pyproject.toml
kedro-project/: README.md
kedro-project/docs/source/: conf.py  index.rst
notebooks/: create_save_load_model.ipynb  load_birdclallclassifier.ipynb  load_from_mlflow_registry.ipynb  load_kerasmodel_mlflow.ipynb  train_nightingale.ipynb  train_nightingale_2.ipynb  yamnet_nightingale.ipynb
src/nightingale/: __init__.py  __main__.py  settings.py
src/nightingale/data-pipeline/: wav_loader.py
src/nightingale/data_pipeline/: audio_dataset_splitter.py  audio_preprocessor.py  convert_audio.py  filter_birdclef_data.py
src/nightingale/model/: bird_call_classifier.py  classifier_head.py  yamnet_base.py
tests/unit/nightingale/: test_audio_preprocessor.py  test_classifier_head.py
