[project]
name = "nightingale"
version = "0.1.0"
description = "Nightingale - A Bird Call Classification Algorithm"
authors = [
    { name= "Ephraim Eckl" },
    { name= "David Pellhammer"}
]
readme = "README.md"
license-files = [ "LICENSE" ]
requires-python = ">=3.11,<3.12"
dependencies = [
    "tensorflow (==2.20.0)",
    "tensorflow-hub (==0.16.1)",
    "fastapi (==0.116.2)",
    "mlflow[databricks] (>=3.4.0,<4.0.0)",
    "uvicorn (==0.37.0)",
    "python-multipart (==0.0.20)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "notebook",
    "kedro~=1.0.0"
]

[project.scripts]
"nightingale" = "nightingale.__main__:main"

[project.entry-points."kedro.hooks"]

[dependency-groups]
doc = [
    "sphinx (==8.2.3)",
    "sphinx-rtd-theme (==3.0.2)"
]
dev = [
    "numpy (==2.3.3)",
    "scikit-learn (==1.7.2)",
    "matplotlib (==3.10.6)",
    "seaborn (==0.13.2)",
    "ipykernel (==6.30.1)",
    "ipywidgets (==8.1.7)",
    "tensorflow (==2.20.0)",
    "tensorflow-io (==0.37.1)",
    "tensorflow-hub (==0.16.1)",
    "pydub (==0.25.1)"
]
test = [
        "pytest-cov~=3.0",
        "pytest-mock>=1.7.1, <2.0",
        "pytest (==8.4.2)",
        "ruff~=0.12.0"
]

[tool.kedro]
package_name = "nightingale"
project_name = "nightingale"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[project.urls]
repository = "https://github.com/emilcode-dev/nightingale"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/nightingale -ra"""